--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,9 @@ spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.url=jdbc:h2:tcp://localhost/~/test
 spring.datasource.username=sa
 #spring 2.4?? username? ? ??????.
+
+spring.jpa.show-sql=true
+#jpa? ??? sql?? ? ? ??.
+
+spring.jpa.hibernate.ddl-auto=none
+#?? ???? ????? ?? ???
